--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
       </div>
 
-      <h2 class="section-heading text-center">Software Development</h2>
+      <h2 class="section-heading text-center my-4">Software Development</h2>
       <hr class="my-4">
 
       <div class="container my-auto">
@@ -617,23 +617,23 @@
 
                     <div class="col-lg-3 text-center">
                         <!-- 9 lines in a lg-4 col -->
-                        <p>Mission College<br>Santa Clara</p>
+                        <p>Mission College<br>Santa Clara, California</p>
                         <p class="text-faded">Ethical Hacking, Kinesiology</p>
                     </div>
 
                   </div>
 
-        <h2 class="mb-4">Select Coursework</h2>
+        <h3 class="my-4">Select Coursework</h3>
 <!--        <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>-->
       
-          <div ng-bind-html="trustedHtml" class="ng-binding">
-             <table align="center">
-                  <thead>
+          <div class="table-responsive col-lg-9 mx-auto">
+             <table class="table table-striped table-bordered table-hover table-light" align="center">
+                  <thead class="thead-light">
                       <tr>
                           <th>SECTION</th>
                           <th>TITLE</th>
                           <th>AUTHORITY</th>
-                          <th>STATUS</th>
+                          <th>PROG</th>
                       </tr>
                   </thead>
                   <tbody>
