UPDATE: portfolio gallery

--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Yik Yak chatrooms with Comcast Everyblock
+                    World's Largest Education Hackathon
                   </div>
                   <div class="project-name">
-                    Everychat
+                    HackingEDU
                   </div>
                 </div>
               </div>
@@ -262,10 +262,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Photo Sharing App that Automatically Likes for You!
+                    Civic Engagement Health Social Impact
                   </div>
                   <div class="project-name">
-                    Instareact
+                    Silicon Hacks
                   </div>
                 </div>
               </div>
@@ -277,10 +277,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Nutrition info via phone camera at UC Berkeley
+                    Exploring the Professional Tech Space
                   </div>
                   <div class="project-name">
-                    Nutrifeye
+                    Spectra
                   </div>
                 </div>
               </div>
@@ -631,7 +631,7 @@
                   <thead class="thead-light">
                       <tr>
                           <th>SECTION</th>
-                          <th>TITLE</th>
+                          <th>COURSE TITLE</th>
                           <th>AUTHORITY</th>
                           <th>PROG</th>
                       </tr>
