UPDATE: portfolio gallery thumbs

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Canadian Special Forces Command Incidence Response Automated Analysis by Artificial Intelligence at Hack the North 2017
+                    Canadian Special Forces Command Incidence Response Automated Analysis by Artificial Intelligence, Hack the North, University of Waterloo
                   </div>
                   <div class="project-name">
                     Ainomaly
@@ -213,11 +213,11 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/SEFartsmallthumb.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    The Social-Engineer Firewall (SEF) from Stanford Treehacks 2018 
+                    The Social-Engineer Firewall (SEF), Treehacks, Stanford University 
                   </div>
                   <div class="project-name">
                     Social-Engineer Toolkit
@@ -232,7 +232,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    The Social Justice Network at PayPal
+                    The Social Justice Network, WWC, PayPal
                   </div>
                   <div class="project-name">
                     Justice Match
@@ -243,7 +243,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/hackingedu.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -258,14 +258,14 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/siliconhacks.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
                     Civic Engagement Health Social Impact
                   </div>
                   <div class="project-name">
-                    Silicon Hacks
+                    SiliconHacks
                   </div>
                 </div>
               </div>
@@ -273,7 +273,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/spectra.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -592,7 +592,9 @@
     </section>
 
     <section class="bg-dark text-white" id="Education">
+
       <div class="container col-lg-12 text-center">
+
       <h2 class="section-heading text-center">Education</h2>
       <hr class="my-4">
             <div class="row">
@@ -1155,7 +1157,7 @@
         </div>
       </div>
     </section>
-      <div class="text-center"><p>© 2018 By Christopher Ngo. All rights reserved. Unauthorized use prohibited.</p></div>
+      <div class="text-center"><p>© Christopher Ngo 2018</p></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
