FIX: SWD div class margin and ainomaly

--- a/index.html
+++ b/index.html
@@ -292,22 +292,21 @@
       <h2 class="section-heading text-center my-4">Software Development</h2>
       <hr class="my-4">
 
-      <div class="container my-auto">
+      <div class="container my-4">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-                    <div id="e-241-c" class="item-container header-padding" crc-link="projects" crc-link-tab="section">
 
                       <div id="undefined-c" class="content-group">
                         <div id="undefined-c" class="row">
                           <div id="undefined-c" class="align-right block col-md-4">
                             <div id="undefined-c" class="content-title">
-                              <div id="undefined-c" flex-height="4" class="font-primary uppercase bold">AInomaly - University of Waterloo, Canada</div>
+                              <div id="undefined-c" flex-height="4" class="font-primary uppercase bold">Ainomaly - University of Waterloo, Canada</div>
                             </div>
                           </div>
                           <div id="undefined-c" class="block col-md-8">
                             <div id="undefined-c" ng-model="item.description" markdown-viewer="" flex-height="4" class="font-secondary content-paragraph description ng-isolate-scope ng-valid">
                               <ul id="undefined-c">
-                                <li id="undefined-c">Wrote security incident response software for the Canadian Special Forces (CANSOFCOM) using Computer Vision and TensorFlow artificial intelligence<br id="undefined-c"></li>
+                                <li id="undefined-c">Wrote artificial intelligence security incident response tracking software for the Canadian Special Forces (CANSOFCOM) using Computer Vision and TensorFlow<br id="undefined-c"></li>
                               </ul>
                             </div>
                           </div>
@@ -585,7 +584,6 @@
                           </div>
                         </div>
                       </div>
-                    </div>
                   </div>
                 </div>
 
@@ -1077,13 +1075,15 @@
 
             <h3 class="section-heading text-white">Ancillary Athletics</h3>
 
-            <p>For Strength Training, my program is Reddit Bodyweight Fitness's RR. As part of the subreddit modteam, we administrate the subreddit and constantly improving our wiki knowledge base to advise and share best exercise, nutrition, and skillwork practices with our community (currently 681,535 members).</p>
+            <p>For Strength Training, I adhere to Reddit Bodyweight Fitness's RR (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improve our knowledge base to advise and share best exercise/nutrition/skillwork practices with our community (currently 681,535 members).</p>
+
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://www.reddit.com/r/bodyweightfitness">Join us! 💪 </a>
 
             <p>I also practice Hatha Yoga, and dance the Latin Ballroom Styles of Bachata, Cha-cha, and Salsa (L.A. Style "On-1" and Cuban "Rueda de Casino").</p>
 
             <p>The Martial Arts I train include "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is Wado Ki Kai Karate, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan.</p>
 
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="./img/wkklineage.png">WKK Lineage <i class="fa fa-tree"></i></a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="./img/wkklineage.png">WKK Lineage 🌲</a>
           </div>
         </div>
       </div>
