--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/creative.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
   </head>
 
