--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 
   </body>
 
