--- a/index.html
+++ b/index.html
@@ -1071,19 +1071,26 @@
             <h2 class="section-heading text-white">Olympics 2020</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">
-            <p>I began playing badminton in 2004 at Bintang, and went on to train at Smash City and BBC3. I qualified for U15 Jr. Nationals, then started my high school badminton career as Varsity 1 BS for MHS in SCVAL of California Interscholastic CCS. I have also competed in many open tournaments at Flights C and D, in events: MD, MS, and XD. At Mission College, I helped train the Women's Intercollegiate team. I was coached by: Angie De Pauw, Arnold Setiadi,  Holvy De Pauw, Jade Tang Jie Yun, Lauren Todt.</p>
+            <p>I began playing badminton in 2004 at Bintang, and went on to train at Smash City and BBC3. I qualified for U15 Jr. Nationals, then started my high school badminton career as Varsity 1 BS for MHS in SCVAL of California Interscholastic CCS. I have also competed in many open tournaments at Flights C and D, in events: MD, MS, and XD. At Mission College, I helped train the Women's Intercollegiate team. Coached by: Angie De Pauw, Arnold Setiadi,  Holvy De Pauw, Jade Tang Jie Yun, Lauren Todt</p>
 
             <h3 class="section-heading text-white">Ancillary Athletics</h3>
 
             <p>For Strength Training, I adhere to Reddit Bodyweight Fitness's RR (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improve our knowledge base to advise and share best exercise/nutrition/skillwork practices with our community (currently 681,535 members).</p>
 
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://www.reddit.com/r/bodyweightfitness">Join us! 💪 </a>
+            <a class="btn btn-light btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Join us! 💪 </a>
 
-            <p>I also practice Hatha Yoga, and dance the Latin Ballroom Styles of Bachata, Cha-cha, and Salsa (L.A. Style "On-1" and Cuban "Rueda de Casino").</p>
+            <h3 class="section-heading text-white">Martial Arts</h3>
 
-            <p>The Martial Arts I train include "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is Wado Ki Kai Karate, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan.</p>
+            <p>My background includes "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is Wado Ki Kai Karate, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan.</p>
 
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="./img/wkklineage.png">WKK Lineage 🌲</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger mb-4" href="./img/wkklineage.png">WKK Lineage 🌲</a>
+
+            <h3 class="section-heading text-white"><a href="https://www.youtube.com/watch?v=XmTmAcVaUAo">Sports Go Sports</a></h3>
+
+            <p>I also Boulder, Climb, Dance [Ballet, Funk, Haitian, Hip-Hop, Jazz, Latin Ballroom (Bachata, Cha-cha, L.A. Style "On-1" Salsa, Cuban Salsa "Rueda de Casino"), Tap], Play Football and Fútbol and Tennis, Skate (Boosted/Electric, Caster, Freeline, Heely, Inline, Longboard, Skateboard), Surf, and much more!</p>
+
+            <a class="btn btn-light btn-xl js-scroll-trigger mb-4" href="https://www.instagram.com/ingochris">Adventure book 📸</a>
+
           </div>
         </div>
       </div>
