FIX: Kino buttons

--- a/index.html
+++ b/index.html
@@ -1077,19 +1077,19 @@
 
             <p>For Strength Training, I adhere to Reddit Bodyweight Fitness's RR (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improve our knowledge base to advise and share best exercise/nutrition/skillwork practices with our community (currently 681,535 members).</p>
 
-            <a class="btn btn-light btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Join us! 💪 </a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Join us! 💪 </a>
 
             <h3 class="section-heading text-white">Martial Arts</h3>
 
             <p>My background includes "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is Wado Ki Kai Karate, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan.</p>
 
-            <a class="btn btn-light btn-xl js-scroll-trigger mb-4" href="./img/wkklineage.png">WKK Lineage 🌲</a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="./img/wkklineage.png">WKK Lineage 🌲</a>
 
             <h3 class="section-heading text-white"><a href="https://www.youtube.com/watch?v=XmTmAcVaUAo">Sports Go Sports</a></h3>
 
             <p>I also Boulder, Climb, Dance [Ballet, Funk, Haitian, Hip-Hop, Jazz, Latin Ballroom (Bachata, Cha-cha, L.A. Style "On-1" Salsa, Cuban Salsa "Rueda de Casino"), Tap], Play Football and Fútbol and Tennis, Skate (Boosted/Electric, Caster, Freeline, Heely, Inline, Longboard, Skateboard), Surf, and much more!</p>
 
-            <a class="btn btn-light btn-xl js-scroll-trigger mb-4" href="https://www.instagram.com/ingochris">Adventure book 📸</a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.instagram.com/ingochris">Adventure book 📸</a>
 
           </div>
         </div>
