FIX: Sports Go Sports link

--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
 
             <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="./img/wkklineage.png">WKK Lineage 🌲</a>
 
-            <h3 class="section-heading text-white"><a href="https://www.youtube.com/watch?v=XmTmAcVaUAo">Sports Go Sports</a></h3>
+            <h3 class="section-heading text-white"><a href="https://www.youtube.com/watch?v=2fraSdN-PG8">Sports Go Sports</a></h3>
 
             <p>I also Boulder, Climb, Dance [Ballet, Funk, Haitian, Hip-Hop, Jazz, Latin Ballroom (Bachata, Cha-cha, L.A. Style "On-1" Salsa, Cuban Salsa "Rueda de Casino"), Tap], Play Football and Fútbol and Tennis, Skate (Boosted/Electric, Caster, Freeline, Heely, Inline, Longboard, Skateboard), Surf, and much more!</p>
 
