RM: popup-gallery div class

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <section class="p-0" id="Development">
 
       <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
+        <div class="row no-gutters">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
               <img class="img-fluid" src="img/portfolio/thumbnails/ainomaly.jpg" alt="">
@@ -1081,7 +1081,7 @@
                 <h3 class="section-heading text-white">Ancillary Athletics</h3>
 
                 <p>For Strength Training, I adhere to <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Reddit Bodyweight Fitness's RR</a> (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improving our knowledge base to advise and share best exercise/nutrition/skillwork practices with the <a href="https://discord.gg/cNX6Hjf">RedditBWF Community</a>.</p>
-                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Currently: <u><span id="subscribers"></span></u> members 💪 </a>
+                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Live Member Count: <u><span id="subscribers"></span></u> 💪 </a>
               </div>
             
               <div class="col-lg-4 text-center">
