FIX: href links in SWE gallery

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+            <a class="portfolio-box" href="https://github.com/ingochris/ainomaly">
               <img class="img-fluid" src="img/portfolio/thumbnails/ainomaly.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -211,7 +211,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+            <a class="portfolio-box" href="http://sefirewall.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/SEFartsmallthumb.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -226,7 +226,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+            <a class="portfolio-box" href="https://github.com/ingochris/justicematch">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -234,14 +234,14 @@
                     The Social Justice Network, WWC, PayPal
                   </div>
                   <div class="project-name">
-                    Justice Match
+                    JusticeMatch
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+            <a class="portfolio-box" href="https://hackingedu.co">
               <img class="img-fluid" src="img/portfolio/thumbnails/hackingedu.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -256,7 +256,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+            <a class="portfolio-box" href="https://siliconhacks.hackerearth.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/siliconhacks.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -271,7 +271,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+            <a class="portfolio-box" href="http://sospectra.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/spectra.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
